--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+      - name: Apply workaround for sudo bug (https://github.com/multiarch/qemu-user-static/issues/17)
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -78,6 +80,8 @@ jobs:
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+      - name: Apply workaround for sudo bug (https://github.com/multiarch/qemu-user-static/issues/17)
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
 
       - name: Login to docker
         run: |
