--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -36,7 +36,11 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Apply workaround for sudo bug (https://github.com/multiarch/qemu-user-static/issues/17)
-        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
+        run: |
+          for conf in qemu-{aarch64,arm}-static.conf
+          do
+            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf > /etc/binfmt/$conf
+          done
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
