build-docker.yml: Add debug output
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -111,6 +111,8 @@ jobs:
           "${cmd[@]}" || {
             tail -n 20 geckodriver.log >&2 || true
             echo "CI:: Activation test failed!"
+            docker exec nextcloudpi bash /usr/local/bin/ncp-diag
+            docker exec service redis-server status
             exit 1
           }
           echo "CI:: Activation test successful"
