--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Apply workaround for sudo bug (https://github.com/multiarch/qemu-user-static/issues/17)
         run: |
           sudo apt-get -y --no-install-recommends install binfmt-support qemu-user-static
+          mkdir -p /etc/binfmt
           for conf in qemu-{aarch64,arm}-static.conf
           do
             sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf > /etc/binfmt/$conf
@@ -133,6 +134,7 @@ jobs:
       - name: Apply workaround for sudo bug (https://github.com/multiarch/qemu-user-static/issues/17)
         run: |
           sudo apt-get -y --no-install-recommends install binfmt-support qemu-user-static
+          mkdir -p /etc/binfmt
           for conf in qemu-{aarch64,arm}-static.conf
           do
             sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf > /etc/binfmt/$conf
