build-sd-images.yml: Fix permission error when writing to /etc/*
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -41,7 +41,7 @@ jobs:
           sudo mkdir -p /etc/binfmt
           for conf in qemu-{aarch64,arm}-static.conf
           do
-            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf > /etc/binfmt/$conf
+            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf | sudo tee /etc/binfmt/$conf
           done
       - name: Checkout code
         uses: actions/checkout@v3
@@ -137,7 +137,7 @@ jobs:
           sudo mkdir -p /etc/binfmt
           for conf in qemu-{aarch64,arm}-static.conf
           do
-            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf > /etc/binfmt/$conf
+            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf | sudo tee /etc/binfmt/$conf
           done
       - name: Checkout code
         uses: actions/checkout@v3
