--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -137,10 +137,10 @@ jobs:
           sudo apt-get -y --no-install-recommends install binfmt-support qemu-user-static
           docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
           sudo mkdir -p /etc/binfmt
-          for conf in qemu-{aarch64,arm}-static.conf
-          do
-            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf | sudo tee /etc/binfmt/$conf
-          done
+#          for conf in qemu-{aarch64,arm}-static.conf
+#          do
+#            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf | sudo tee /etc/binfmt/$conf
+#          done
       - name: Checkout code
         uses: actions/checkout@v3
         with:
