--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -84,8 +84,11 @@ jobs:
           mv "${artifacts[0]}" "output/$IMG"
           echo "::set-output name=artifact_file::${IMG}"
           echo "ARTIFACT_FILE=${IMG}" >> $GITHUB_ENV
+      - name: debug
+        if: ${{ always() }}
+        run: echo "${{ inputs.board_id != 'raspberrypi' && failure() }}"
       - name: "Upload Armbian logs"
-        if: ${{ inputs.board_id != 'raspberrypi' && steps.build-armbian-2nd.outcome == 'failure' }}
+        if: ${{ inputs.board_id != 'raspberrypi' && failure() }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.run_id }}-${{ inputs.board_id }}-logs
