--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -35,11 +35,11 @@ jobs:
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      - name: Apply workaround for sudo bug (https://github.com/multiarch/qemu-user-static/issues/17)
-        run: |
-          sudo apt-get -y --no-install-recommends install binfmt-support qemu-user-static
-          docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
-          sudo mkdir -p /etc/binfmt
+#      - name: Apply workaround for sudo bug (https://github.com/multiarch/qemu-user-static/issues/17)
+#        run: |
+#          sudo apt-get -y --no-install-recommends install binfmt-support qemu-user-static
+#          docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
+#          sudo mkdir -p /etc/binfmt
 #          for conf in qemu-{aarch64,arm}-static.conf
 #          do
 #            sed 's/:F$/:OC/' /usr/lib/binfmt.d/$conf | sudo tee /etc/binfmt/$conf
