build-sd-images.yml: Add debug output
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -50,8 +50,8 @@ jobs:
           ref: "${{ env.VERSION }}"
       - name: Debug
         run: |
-          update-binfmts --display qemu-aarch64
-          update-binfmts --display qemu-arm
+#          update-binfmts --display qemu-aarch64
+#          update-binfmts --display qemu-arm
           which qemu-aarch64-static
       - name: "Build Armbian"
         if: ${{ inputs.board_id != 'raspberrypi' }}
