ncp-update-nc: Disable broken debug output
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -48,9 +48,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: "${{ env.VERSION }}"
-      - name: Debug
-        run: |
-          which qemu-aarch64-static
+#      - name: Debug
+#        run: |
+#          which qemu-aarch64-static
 #          update-binfmts --display qemu-aarch64
 #          update-binfmts --display qemu-arm
       - name: "Build Armbian"
