--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -103,46 +103,63 @@ jobs:
         run: |
           docker logs nextcloudpi |& awk '{ print "CONTAINER::" $0 }'
           echo 'CONTAINER:: =========='
-          docker logs -f |& awk '{ print "CONTAINER::" $0 }' &
+          docker logs -f nextcloudpi |& awk '{ print "CONTAINER::" $0 }' &
           docker exec nextcloudpi bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
           cmd=(python activation_tests.py --no-gui localhost 8443 4443)
           [[ "${{ matrix.arch }}" == "x86" ]] || cmd+=(--timeout 300)
-          "${cmd[@]}" || {
-            tail -n 20 geckodriver.log >&2 || true
-            echo "======================="
-            echo "Activation test failed!"
-            echo "Container logs:"
-            echo "==========================================="
-            docker logs nextcloudpi
-            echo "Last lines of ncp.log:"
-            echo "==========================================="
-            docker exec nextcloudpi tail /var/log/ncp.log;
+          
+          success=false
+          for attempt in {1..3}
+          do
+            echo ":: Activation Tests (attempt $attempt/3) ::"
+            "${cmd[@]}" || {
+              tail -n 20 geckodriver.log >&2 || true
+              echo "CI:: Activation test (attempt $attempt/3) failed!"
+              docker exec nextcloudpi bash /usr/local/bin/ncp-diag
+              sleep 12
+              continue
+            }
+            success=true
+            break
+          done
+          [[ "$success" == "true" ]] || {
+            echo "CI:: Activation test failed in all attempts!"
             exit 1
           }
-          echo "Activation test successful"
-          python system_tests.py --no-ping --non-interactive || {
-            echo "System test failed!"
-            echo "Container logs:"
-            echo "==========================================="
-            docker logs nextcloudpi
-            echo "Last lines of ncp.log:"
-            echo "==========================================="
-            docker exec nextcloudpi tail /var/log/ncp.log;
-            exit 1
-            exit 1
-          }
-          echo "System test successful"
-          python nextcloud_tests.py --no-gui localhost 8443 4443 || {
-            tail -n 20 geckodriver.log >&2 || true
-            echo "======================="
-            echo "Nextcloud test failed!"
-            echo "Container logs:"
-            echo "==========================================="
-            docker logs nextcloudpi
-            echo "Last lines of ncp.log:"
-            echo "==========================================="
-            docker exec nextcloudpi tail /var/log/ncp.log;
+          echo "CI:: Activation test successful"
+          
+          success=false
+          for attempt in {1..3}
+          do
+            echo ":: System Tests (attempt $attempt/3) ::"
+            python system_tests.py --no-ping --non-interactive || {
+              echo "CI:: System test (attempt $attempt) failed!"
+              continue
+            }
+            success=true
+            break
+          done
+          [[ "$success" == "true" ]] || {
+            echo "CI:: System test failed in all attempts!"
             exit 1
           }
-          echo "Nextcloud test successful"
+          echo "CI:: System test successful"
+          
+          success=false
+          for attempt in {1..3}
+          do
+            echo ":: Nextcloud Tests (attempt $attempt/3) ::"
+            python nextcloud_tests.py --no-gui localhost 8443 4443 || {
+              tail -n 20 geckodriver.log >&2 || true
+              echo "CI:: Nextcloud test (attempt $attempt/3) failed!"
+              continue
+            }
+            success=true
+            break
+          done
+          [[ "$success" == "true" ]] || {
+            echo "CI:: Nextcloud test failed in all attempts!"
+            exit 1
+          }
+          echo "CI:: Nextcloud test successful"
 
