--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,11 +47,28 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
     secrets: inherit
 
-  docker:
+  docker-x86:
     if: ${{ inputs.docker || github.event_name != 'workflow_dispatch' }}
     uses: ./.github/workflows/build-docker.yml
     with:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      arch: "x86"
+    secrets: inherit
+
+  docker-armhf:
+    if: ${{ inputs.docker || github.event_name != 'workflow_dispatch' }}
+    uses: ./.github/workflows/build-docker.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      arch: "armhf"
+    secrets: inherit
+
+  docker-arm64:
+    if: ${{ inputs.docker || github.event_name != 'workflow_dispatch' }}
+    uses: ./.github/workflows/build-docker.yml
+    with:
+      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      arch: "arm64"
     secrets: inherit
 
   test-curl-installer:
